--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+        "prebuild": "git lfs pull", 
+
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
